# sabot-warfarin-clinic

./: .gitignore  AGENTS.md  CLOUD-SYNC.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: windows-release.yml
scripts/: gen-icons.cjs  supabase_repair.sql  supabase_schema.sql
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main-user-interface.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_patient_status_history.sql  0003_visit_dose_description.sql  0004_visit_selected_dose_option.sql  0005_visit_linked_appointments.sql  0006_drug_interactions.sql  0007_visit_review.sql  0008_cloud_sync.sql
src-tauri/src/: encrypt.rs  lib.rs  main.rs
src-tauri/src/commands/: alerts.rs  appointments.rs  inr.rs  interaction.rs  mod.rs  outcomes.rs  patients.rs  reports.rs  screening.rs  settings.rs  slip.rs  sync.rs  visits.rs
src-tauri/src/db/: mysql.rs  sqlite.rs
src-tauri/src/dose/: calculator.rs  mod.rs  usage_parser.rs
src-tauri/src/models/: alert.rs  appointment.rs  dispensing.rs  inr.rs  interaction.rs  mod.rs  outcome.rs  patient.rs  sync.rs  visit.rs
src/assets/: design-tokens.css  main.css
src/composables/: useDoseCalculator.ts
src/router/: index.ts
src/stores/: alerts.ts  patient.ts  review.ts  screening.ts  settings.ts  sync.ts  visit.ts
src/types/: alert.ts  appointment.ts  dispensing.ts  dose.ts  inr.ts  outcome.ts  patient.ts  visit.ts
(+40 files in other folders)
