[package]
name = "sabot-warfarin-clinic"
version = "1.0.0"
description = "Warfarin Clinic Management System — Sabot Hospital"
authors = ["Suradet Pratomsak"]
edition = "2024"

[lib]
name = "sabot_warfarin_clinic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sqlx = { version = "0.8", features = ["mysql", "sqlite", "runtime-tokio", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
regex = "1"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
